@@ -38,6 +38,7 @@ static struct filter_t
 }
 s_filters[] = 
 {
+#ifndef NO_BUILDIN_FILTERS
 	{_T("AVI"), 0, SRC_AVI, IDS_SRC_AVI, NULL},
 	{_T("CDDA (Audio CD)"), 0, SRC_CDDA, IDS_SRC_CDDA, NULL},
 	{_T("CDXA (VCD/SVCD/XCD)"), 0, SRC_CDXA, IDS_SRC_CDXA, NULL},
@@ -74,6 +75,9 @@ s_filters[] =
 	{_T("RealAudio"), 1, TRA_RA, IDS_TRA_RA, NULL},
 	{_T("Vorbis"), 1, TRA_VORBIS, 0, NULL /* TODO: CreateInstance<CMpaDecFilter>*/},
 	__if_exists(CFLVVideoDecoder) {{_T("VP62"), 1, TRA_VP62, 0, NULL},}
+#else
+	{_T("Matroska"), 0, SRC_MATROSKA, IDS_SRC_MATROSKA, NULL},
+#endif // NO_BUILDIN_FILTERS
 };
 
 IMPLEMENT_DYNAMIC(CPPageInternalFiltersListBox, CCheckListBox)
